gdnative/tests/ui/derive_fail_methods_param.stderr
error: expected literal
 --> tests/ui/derive_fail_methods_param.rs:7:15
  |
7 | #[methods(foo=bar)]
  |               ^^^
